--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-POI_APP_SOCKET_PROTOCAL=wss
-POI_APP_SOCKET_HOST=echo.websocket.org
-POI_APP_SOCKET_PORT=80
-POI_APP_SOCKET_PATH=
+PUBLIC_URL=./
+PORT=3000
+GENERATE_SOURCEMAP=
+
+REACT_APP_SOCKET_PROTOCAL=wss
+REACT_APP_SOCKET_HOST=echo.websocket.org
+REACT_APP_SOCKET_PORT=80
+REACT_APP_SOCKET_PATH=
