--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "AdsPlatform",
+  "name": "ads-platform",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "build": "poi --prod",
-    "dev": "poi --serve",
-    "lint": "eslint ."
-  },
-  "eslint": {
-    "@disable": false,
-    "args": [],
-    "excludes": [
-      "*/*.html"
-    ]
-  },
-  "devDependencies": {
-    "@poi/plugin-eslint": "^12.0.0",
-    "eslint": "^5.9.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "node-sass": "^4.13.1",
-    "poi": "^12.4.2",
-    "sass-loader": "^8.0.2"
-  },
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.1",
+    "react-use": "^13.24.0",
     "youtube-player": "^5.5.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
